# longest-word-chain

./: .gitignore  CMakeLists.txt  README.md  design_doc.md  make.sh  run.sh  test.txt
UnitTest1/: unittest1.cpp
data/: test3.txt  test5.txt
include/: se_word_chain.hpp  se_word_chain_core.hpp  se_word_chain_interface.hpp  se_word_chain_utils.hpp
other_project/: README.md  结对编程规范约定.md
our_project/: CMakeLists.txt  README.md  design_doc.md  make.sh
our_project/data/: test4.txt
our_project/include/: se_word_chain.hpp  se_word_chain_core.hpp  se_word_chain_utils.hpp
our_project/qt/: dialog.ui  mainwindow.cpp  mainwindow.ui
our_project/src/: gui.cpp  se_word_chain_core.cpp  se_word_chain_interface.cpp
qt/: helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.pro
src/: main.cpp  se_word_chain_core.cpp  se_word_chain_interface.cpp  se_word_chain_utils.cpp
